# Document-search

./: .gitignore  README.md  docker-compose.yml  dockerfile  document_processor.py  main.py  pyproject.toml  render.yaml  requirements.txt
app/: config.py  logger.py
app/services/: extraction_service.py  image_service.py  llm_service.py  vector_service.py
ui/: streamlit_app.py
